--- a/whatsapp-backend/package.json
+++ b/whatsapp-backend/package.json
@@ -4,10 +4,13 @@
   "description": "WhatsApp backend for Sigortam",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "npx puppeteer browsers install chrome"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "express": "^4.18.2",
+    "puppeteer": "^24.3.0",
     "qrcode": "^1.5.3",
     "whatsapp-web.js": "^1.23.0"
   }
