--- a/whatsapp-backend/package.json
+++ b/whatsapp-backend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "puppeteer": "^24.3.0",
     "qrcode": "^1.5.3",
