Configure Windows installer icon

--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
       "electron/**/*"
     ],
     "win": {
-      "target": "nsis"
+      "target": "nsis",
+      "icon": "public/favicon.ico"
     },
     "publish": {
       "provider": "github",
