--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "trae-project",
+  "name": "sigortam-kayit",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "description": "Sigorta Acentesi Yönetim Paneli",
   "author": "Trae User",
@@ -67,7 +67,7 @@
   },
   "build": {
     "appId": "com.sigorta.panel",
-    "productName": "Sigortam Paneli",
+    "productName": "Sigortam",
     "directories": {
       "output": "dist-electron"
     },
