--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "appId": "com.sigorta.panel",
     "productName": "Sigortam",
     "directories": {
-      "output": "dist-electron"
+      "output": "dist-final"
     },
     "files": [
       "dist/**/*",
