--- a/package.json
+++ b/package.json
@@ -5,21 +5,16 @@
   "type": "module",
   "description": "Sigorta Acentesi Yönetim Paneli",
   "author": "Trae User",
-  "main": "electron/main.cjs",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "check": "tsc -b --noEmit",
-    "electron": "wait-on tcp:5173 && electron .",
-    "electron:dev": "concurrently -k \"npm run dev\" \"npm run electron\"",
-    "electron:build": "npm run build && electron-builder"
+    "check": "tsc -b --noEmit"
   },
   "dependencies": {
     "@tanstack/react-virtual": "^3.13.18",
-    "electron-squirrel-startup": "^1.0.1",
-    "electron-updater": "^6.7.3",
+    "framer-motion": "^12.30.0",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
@@ -36,12 +31,9 @@
     "autoprefixer": "^10.4.21",
     "babel-plugin-react-dev-locator": "^1.0.0",
     "clsx": "^2.1.1",
-    "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
-    "electron": "^40.0.0",
-    "electron-builder": "^26.4.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
@@ -61,28 +53,7 @@
     "vite": "^6.3.5",
     "vite-plugin-trae-solo-badge": "^1.0.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "wait-on": "^9.0.3",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.3"
-  },
-  "build": {
-    "appId": "com.sigorta.panel",
-    "productName": "Sigortam",
-    "directories": {
-      "output": "dist-final"
-    },
-    "files": [
-      "dist/**/*",
-      "electron/**/*"
-    ],
-    "win": {
-      "target": "nsis",
-      "icon": "public/favicon.ico"
-    },
-    "publish": {
-      "provider": "github",
-      "owner": "sammet353321",
-      "repo": "sigortamv3"
-    }
   }
 }
