--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@tanstack/react-virtual": "^3.13.18",
+    "@types/react-datepicker": "^6.2.0",
     "framer-motion": "^12.30.0",
+    "react-datepicker": "^9.1.0",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
