--- a/whatsapp-backend/package.json
+++ b/whatsapp-backend/package.json
@@ -8,11 +8,14 @@
     "dev": "node index.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.39.0",
     "@whiskeysockets/baileys": "^6.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "multer": "^2.0.2",
+    "pdf-parse": "^1.1.1",
     "pino": "^8.16.2",
     "qrcode": "^1.5.3",
     "socket.io": "^4.7.2"
